[b]Version 0.6.2[/b]:

(2008-07-05)
 * Some changes in the single instance options. Now the single instance is
   enabled by default. There's also the possibility to let the application
   to choose automatically the port to be used, which is also the default
   option.

(2008-07-03)
 * Temporary fix for the problem created yesterday: now when a file starts to 
   play, the audio track will be changed using the mplayer slave command even 
   if the option "Fast audio track switching" is set to "No". This makes that 
   the selection of the initial audio track works ok with avi and mkv files 
   for example, but it won't work yet with ogm for instance. 
 * The floating control in the default gui saves/restores its actions to 
   the config file, so now it can be customized by the user.
 * The seeking mini buttons come back. Now by default, the default gui
   will show only two seeking buttons. Keeping them pressed for a moment
   will pop up the rest of the buttons. You may need to delete the 
   [default_gui] section in the config file (or at least the options which
   start with "actions\...") to see them. If you don't like these buttons
   you can delete them from the config file and add the old ones.

(2008-07-02)
 * The SSA/ASS library is NOT enabled by default. It seems there are memory 
   leaks in libass...
 * Fixed a crash which may happen if the option "Fast audio track switching" 
   was set to "No". As a side effect, now if that option is set to "No" the 
   preferred audio language (set in the preferences), won't be selected on
   startup, the file will just start to play with the default audio track.

(2008-07-01)
 * The minimum size of the video window is now 1x1 instead of 0x0. Fixes a
   crash that may happen under certain circumstances.

(2008-06-26)
 * Now everything in the audio equalizer should work. The "apply" button
   restarts the file and passes the equalizer settings using the "equalizer"